# chessju

./: .env.example  .env.production.example  .gitignore  AGENTS.md  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260519_000001_initial_foundation.py  20260519_000002_auth_user_foundation.py  20260519_000003_admin_audit_logs.py  20260519_000004_files_news_announcements.py  20260519_000005_tournaments_mvp.py  20260519_000006_rounds_pairings_results.py  20260519_000007_ju_leaderboard.py  20260519_000008_pgn_game_library.py  20260519_000009_stockfish_analysis_jobs.py  20260519_000010_chesscom_import.py  20260519_000011_chess_clock_backend.py  20260519_000012_friends_direct_chat.py  20260519_000013_realtime_notifications.py
backend/app/: __init__.py  config.py  database.py  main.py  valkey.py
backend/app/admin/: models.py  router.py  schemas.py  services.py
backend/app/analysis/: __init__.py  engine.py  models.py  queue.py  router.py  schemas.py  services.py  tasks.py
backend/app/auth/: constants.py  dependencies.py  models.py  permissions.py  (+4 more)
backend/scripts/: __init__.py  seed_demo_data.py  smoke_test_api.py
backend/tests/: conftest.py  test_admin.py  test_analysis.py  test_api_hardening.py  test_auth.py  test_chesscom_import.py  test_clock.py  test_config.py  test_files_news_announcements.py  test_health.py  test_leaderboard.py  test_notifications_realtime.py  test_pgn_game_library.py  test_release_candidate_scripts.py  test_rounds_pairings_results.py  test_social_chat.py  test_tournaments.py
(+154 files in other folders)
