[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chessju-backend"
version = "0.1.0"
description = "ChessJU FastAPI backend"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.14,<2",
    "argon2-cffi>=25.1,<26",
    "email-validator>=2.2,<3",
    "fastapi>=0.115,<1",
    "PyJWT>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "python-chess>=1.999,<2",
    "python-multipart>=0.0.20,<1",
    "psycopg[binary]>=3.2,<4",
    "redis>=5,<7",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
